--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "alchemy-sdk": "^3.5.6",
     "axios": "^1.8.2",
     "bcrypt": "^5.1.1",
     "bip39": "^3.1.0",
@@ -24,7 +25,8 @@
     "express-session": "^1.18.1",
     "method-override": "^3.0.0",
     "mongodb": "^6.14.2",
-    "mongoose": "^8.12.1"
+    "mongoose": "^8.12.1",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
