--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "method-override": "^3.0.0",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.2",
     "pinata": "^2.2.0",
     "web3": "^4.16.0"
   },
