--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
   "description": "",
   "dependencies": {
     "alchemy-sdk": "^3.5.6",
-    "axios": "^1.8.2",
+    "axios": "^1.10.0",
     "bcrypt": "^5.1.1",
     "bip39": "^3.1.0",
+    "bull": "^4.16.5",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
+    "ethers": "^6.14.4",
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
+    "ioredis": "^5.6.1",
     "method-override": "^3.0.0",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
