--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "safubaeserver",
+  "name": "Level3server",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "pm2-runtime ecosystem.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -32,6 +32,7 @@
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.2",
     "pinata": "^2.2.0",
+    "pm2": "^6.0.8",
     "web3": "^4.16.0"
   },
   "devDependencies": {
