--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "pm2-runtime ecosystem.config.js",
+    "start": "pm2-runtime ecosystem.config.cjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
