--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.1",
     "bip39": "^3.1.0",
     "bull": "^4.16.5",
+    "bullmq": "^5.56.8",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
